--- a/.github/workflows/lre_execute_loadtest.yml
+++ b/.github/workflows/lre_execute_loadtest.yml
@@ -4,7 +4,7 @@ on:
       lre_server:
         description: 'LRE URL'
         required: true
-        default: 'nimbuswindows.emea.softwaregrp.net'
+        default: 'http://nimbuswindows.emea.softwaregrp.net'
       lre_domain:
         description: 'Domain'
         required: true
@@ -20,21 +20,16 @@ on:
         description: 'The directory to save results'
         required: false
         default: './LreResult'
-      lrc_report_types:
-        description: 'Target report types. For example: pdf, docx, csv'
-        required: false
-        default: 'pdf'
 jobs:
-  start_load_test:
+  test:
     runs-on: self-hosted
-    name: Execute LRE load test   
+    name: Execute LRE load test  
+    env:
+        lre_username: ${{ secrets.LRE_APIKey_ClientId }}
+        lre_password: ${{ secrets.LRE_APIKey_ClientSecret }}        
     steps:
       - name: Run test in LRE
         uses: MicroFocus/lre-gh-action@v1.0.2
-        id: lre_run_test
-        env:
-            lre_username: ${{ secrets.LRE_APIKey_ClientId }}
-            lre_password: ${{ secrets.LRE_APIKey_ClientSecret }}
         with:
           lre_action: ExecuteLreTest
           lre_description: Run load test in LRE
@@ -52,10 +47,9 @@ jobs:
           lre_trend_report: ASSOCIATED
           lre_status_by_sla: false
           lre_output_dir: ${{ github.workspace }}
-
       - name: Upload LRE results
         uses: actions/upload-artifact@v4
         with:
-          name: LRE Load Test Result
-          path: ${{ github.workspace }}/LreResult
+          name: LRE-Load-Test-Result
+          path: ${{ github.event.inputs.lre_output_dir }}
           
