--- a/.github/workflows/lre_execute_loadtest.yml
+++ b/.github/workflows/lre_execute_loadtest.yml
@@ -26,6 +26,7 @@ jobs:
     steps:
       - name: Run test in LRE
         uses: MicroFocus/lre-gh-action@v1.0.2
+        id: lre_run_test
         with:
           lre_enable_stacktrace : true       
           lre_action: ExecuteLreTest
@@ -43,6 +44,8 @@ jobs:
           lre_vuds_mode: false
           lre_status_by_sla: false
           lre_output_dir: ${{ github.workspace }}
+      - name: Print test run ID
+        run: echo "LRE Run ID is ${{ steps.lre_run_test.outputs.lre_run_id }}"
       - name: Upload LRE results
         uses: actions/upload-artifact@v4
         with:
