--- a/.github/workflows/lre_execute_loadtest.yml
+++ b/.github/workflows/lre_execute_loadtest.yml
@@ -13,9 +13,9 @@ on:
         description: 'Test ID'
         required: true
       lre_output_dir:
-        description: 'The directory to save results'
+        description: 'The directory to save test run results'
         required: true
-        default: './LRE-Test-'
+        default: 'LRE-Test-'
 jobs:
   test:
     runs-on: self-hosted
@@ -43,11 +43,10 @@ jobs:
           lre_post_run_action: 'Collate and Analyze'
           lre_vuds_mode: false
           lre_status_by_sla: false
-          lre_output_dir: ${{ github.event.inputs.lre_output_dir }}
-      - name: Print test run ID
-        run: echo "LRE Run ID is ${{ steps.lre_run_test.outputs.lre_run_id }}"
+          lre_output_dir: ${{ github.workspace }}/${{ github.event.inputs.lre_output_dir }}
       - name: Upload LRE results
         uses: actions/upload-artifact@v4
+        id: lre_upload_test_result
         with:
           name: LRE-Load-Test-Result
           path: ${{ github.workspace }}/${{ github.event.inputs.lre_test_output_dir }}
