--- a/.github/workflows/lre_execute_loadtest.yml
+++ b/.github/workflows/lre_execute_loadtest.yml
@@ -12,7 +12,7 @@ on:
       lre_test:
         description: 'Test ID'
         required: true
-      lre_output_dir:
+      lre_test_output_dir:
         description: 'The directory to save test run results'
         required: true
         default: 'LRE-Test-'
@@ -43,11 +43,11 @@ jobs:
           lre_post_run_action: 'Collate and Analyze'
           lre_vuds_mode: false
           lre_status_by_sla: false
-          lre_output_dir: ${{ github.event.inputs.lre_output_dir }}
+          lre_output_dir: ${{ github.workspace }}
       - name: Upload LRE results
         uses: actions/upload-artifact@v4
         id: lre_upload_test_result
         with:
           name: LRE-Load-Test-Result
-          path: ${{ github.workspace }}/${{ github.event.inputs.lre_output_dir }}
+          path: ${{ github.workspace }}/LreResult
           
