--- a/.github/workflows/lre_execute_loadtest.yml
+++ b/.github/workflows/lre_execute_loadtest.yml
@@ -43,8 +43,8 @@ jobs:
           lre_post_run_action: 'Collate and Analyze'
           lre_vuds_mode: false
           lre_status_by_sla: false
-          lre_output_dir: ${{ github.workspace }}
-      - name: Upload LRE results
+          lre_output_dir: ${{ github.workspace }}/${{ github.event.inputs.lre_test }}
+      - name: Upload-LRE-Results
         uses: actions/upload-artifact@v4
         id: lre_upload_test_result
         with:
