--- a/.github/workflows/lre_execute_loadtest.yml
+++ b/.github/workflows/lre_execute_loadtest.yml
@@ -12,10 +12,7 @@ on:
       lre_test:
         description: 'Test ID'
         required: true
-      lre_test_output_dir:
-        description: 'The directory to save test run results'
-        required: true
-        default: 'LRE-Test-'
+
 jobs:
   test:
     runs-on: self-hosted
@@ -43,11 +40,11 @@ jobs:
           lre_post_run_action: 'Collate and Analyze'
           lre_vuds_mode: false
           lre_status_by_sla: false
-#         lre_output_dir: ${{ github.workspace }}/LreResult/${{ github.event.inputs.lre_test }}
+          lre_output_dir: ${{ github.workspace }}
       - name: Upload-LRE-Results
         uses: actions/upload-artifact@v4
         id: lre_upload_test_result
         with:
           name: LRE-Load-Test-Result
-          path: ${{ github.workspace }}/LreResult/${{ github.event.inputs.lre_test }}
+          path: ${{ github.workspace }}/LreResult/LreReports
           
