--- a/YamlTest/TestSettings.yaml
+++ b/YamlTest/TestSettings.yaml
@@ -1,9 +1,9 @@
 ##################################################
 group:
-  - group_name: "Test_defined_by_.yaml_file"
+  - group_name: "Test_yaml_file"
     vusers: '5'
-    #script_id: 200
-    script_path: "YamlTests\\AdvantageOnlineShopping"
+    script_id: 200
+    #script_path: "YamlTests\\AdvantageOnlineShopping"
     lg_name:
       - "LG1"
 scheduler:
