--- a/.github/workflows/lre_createandrun_loadtest.yml
+++ b/.github/workflows/lre_createandrun_loadtest.yml
@@ -41,7 +41,7 @@ jobs:
           lre_post_run_action: 'Collate and Analyze'
           lre_vuds_mode: false
           lre_status_by_sla: false
-          lre_output_dir: "${{ github.workspace }}/${{ github.event.inputs.lre_domain }}/${{ github.event.inputs.lre_project }}/${{ github.event.inputs.lre_test }}"
+          lre_output_dir: "${{ github.workspace }}/${{ github.event.inputs.lre_domain }}/${{ github.event.inputs.lre_project }}/yaml"
       - name: Upload-LRE-Results
         uses: actions/upload-artifact@v4
         id: lre_upload_test_result
