--- a/YamlTest/TestSettings.yaml
+++ b/YamlTest/TestSettings.yaml
@@ -1,8 +1,8 @@
 group:
   - group_name: "yamltest"
     vusers: '5'
-    script_id: 200
-    #script_path: "YamlTests\\AdvantageOnlineShopping"
+    #script_id: 200
+    script_path: "YamlTests\\AdvantageOnlineShopping"
     lg_name:
       - "LG1"
 scheduler:
