--- a/YamlTest/TestSettings.yaml
+++ b/YamlTest/TestSettings.yaml
@@ -1,10 +1,15 @@
+##################################################
 group:
-  - group_name: "yamltest"
-    vusers: '5'
+  - group_name: "demo_script_new"
+    vusers: '2'
     #script_id: 200
     script_path: "YamlTests\\AdvantageOnlineShopping"
     lg_name:
-    - "LG1"
+      - "LG1"
 scheduler:
-  rampup: '20'
+  rampup: '10'
   duration: '60'
+automatic_trending:
+  report_id: 6
+  max_runs_in_report: 3
+##################################################
