--- a/YamlTest/TestSettings.yaml
+++ b/YamlTest/TestSettings.yaml
@@ -2,8 +2,8 @@
 group:
   - group_name: "demo_script_new"
     vusers: '2'
-    #script_id: 200
-    script_path: "YamlTests\\AdvantageOnlineShopping"
+    script_id: 200
+    #script_path: "YamlTests\\AdvantageOnlineShopping"
     lg_name:
       - "LG1"
 scheduler:
