--- a/.github/workflows/lre_createandrun_loadtest.yml
+++ b/.github/workflows/lre_createandrun_loadtest.yml
@@ -30,8 +30,8 @@ jobs:
           lre_authenticate_with_token: true
           lre_domain: ${{ github.event.inputs.lre_domain }}
           lre_project: ${{ github.event.inputs.lre_project }}
-          lre_test: 201
-# lre_test: YamlTest/TestSettings.yaml
+#         lre_test: 201
+          lre_test: YamlTest\TestSettings.yaml
           lre_test_instance: AUTO
           lre_timeslot_duration_hours: 0
           lre_timeslot_duration_minutes: 30
@@ -39,10 +39,10 @@ jobs:
           lre_vuds_mode: false
           lre_status_by_sla: false
           lre_output_dir: "${{ github.workspace }}/${{ github.event.inputs.lre_domain }}/${{ github.event.inputs.lre_project }}/yaml"
-#   - name: Upload-LRE-Results
-#     uses: actions/upload-artifact@v4
-#     id: lre_upload_test_result
-#     with:
-#       name: LRE-Load-Test-Result
-#       path: ${{ github.workspace }}/${{ github.event.inputs.lre_domain }}/${{ github.event.inputs.lre_project }}/yaml/LreResult/LreReports
+      - name: Upload-LRE-Results
+        uses: actions/upload-artifact@v4
+        id: lre_upload_test_result
+        with:
+          name: LRE-Load-Test-Result
+          path: ${{ github.workspace }}/${{ github.event.inputs.lre_domain }}/${{ github.event.inputs.lre_project }}/yaml/LreResult/LreReports
           
